# Oiskis

./: .gitignore  CMakeLists.txt  README.md
cmake/: config.cmake  install_glew.cmake  install_resource.cmake  install_sfml.cmake
source/: main.cpp
